<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">MonTransit</string>
    <string name="app_desc">Montreal Transit for Android.</string>
    <string name="bus">Bus</string>
    <string name="subway">Subway</string>
    <string name="favorite">Favorites</string>
    <string name="stop_code">Stop code</string>
    <string name="stop_code_hint">Stop code (or line number).</string>
    <string name="please_enter_a_stop_code">Please, enter a stop code.</string>
    <string name="no_history">No history.</string>
    <string name="clear_history">Clear the history.</string>
    <string name="no_internet">No Internet connection!</string>
    <string name="no_offline_data">No offline data!</string>
    <string name="select_bus_direction">Direction</string>
    <string name="select_bus_line_direction_and_number">Line %s - Direction</string>
    <string name="select_bus_line_detail_direction_and_number_and_direction">Line %1$s - Direction %2$s</string>
    <string name="select_bus_line_stop_and_number">Line %s - Stops</string>
    <string name="direction">Direction</string>
    <string name="direction_and_string">Direction %s</string>
    <string name="frequency">Frequency</string>
    <string name="change_direction">Other directions</string>
    <string name="see_bus_line_plan">Map (stm.info)</string>
    <string name="hours_string">Schedule</string>
    <string name="minutes">minutes</string>
    <string name="minutes_and_minutes">%s minutes</string>
    <string name="subway_line">Line</string>
    <string name="subway_lines">Lines</string>
    <string name="bus_line">Bus line</string>
    <string name="bus_lines">Bus lines</string>
    <string name="bus_lines_connecting">Bus lines connecting</string>
    <string name="no_bus_line">No bus line!</string>
    <string name="no_subway_line">No subway line!</string>
    <string name="line">Line</string>
    <string name="lines">Lines</string>
    <string name="green_line">Green line</string>
    <string name="green_line_short">Green</string>
	<string name="orange_line">Orange line</string>
	<string name="orange_line_short">Orange</string>
	<string name="yellow_line">Yellow line</string>
	<string name="yellow_line_short">Yellow</string>
	<string name="blue_line">Blue line</string>
	<string name="blue_line_short">Blue</string>
	<string name="select_subway_direction">Direction</string>
	<string name="select_subway_direction_and_name">%s line - Direction</string>
	<string name="select_route_trip_and_route_name">%s - Direction</string>
	<string name="first_trains">First trains</string>
	<string name="last_trains">Last trains</string>
	<string name="next_stops">Next passages</string>
	<string name="other_route_trip">Other line(s)</string>
	<string name="next_stops_message">MonTransit displays the planned schedule (when available) and then retrieves the schedule in real time from the official website of the transit agency.</string>
	<string name="next_stops_message_and_source">MonTransit displays the planned schedule (when available) and then retrieves the schedule in real time from %s.</string>
	<string name="next_bus_stops">Next passages</string>
	<string name="next_bus_stops_and_source">Next passages (%s)</string>
	<string name="next_bus_stops_message_and_source">MonTransit retrieves the next bus stops passages in real time from %s.</string>
	<string name="next_bus_stops_message_auto">MonTransit retrieves the next bus stops passages in real time from the best source available.</string>
	<string name="next_bus_stops_note">%1$s: %2$s</string>
	<string name="other_bus_line">Other bus line(s)</string>
	<string name="closest_bus_stops">Closest stops</string>
	<string name="closest_bus_stops_error">Error while searching for closest stops.</string>
	<string name="subway_station">Subway station</string>
	<string name="subway_station_short">Station</string>
	<string name="subway_station_with_name_short">%1$s station</string>
	<string name="subway_stations">Subway stations</string>
	<string name="stations">Stations</string>
	<string name="stations_and_order">Stations (%s)</string>
	<string name="subway_stations_short">Stations</string>
	<string name="closest_subway_stations">Closest stations</string>
	<string name="closest_subway_stations_cancelled">Search for closest stations cancelled.</string>
	<string name="closest_subway_stations_error">Error while searching for closest stations.</string>
	<string name="reload_closest_stations">Closest stations</string>
	<string name="descent_only">Descent only</string>
	<string name="stops_short">Stops</string>
	<string name="stops_short_and_direction">Stops (Direction %s)</string>
	<string name="stop_no_info_and_source">No information on %2$s about the line %1$s at this stop.</string>
	<string name="bus_stops">Bus stops</string>
	<string name="bus_stops_short">Stops</string>
	<string name="bus_stops_short_and_direction">Stops (Direction %s)</string>
	<string name="bus_stop">Bus stop</string>
	<string name="bus_stop_short">Stop</string>
	<string name="bus_stop_and_line_short">Stop %1$s (Line %2$s)</string>
	<string name="bus_stop_removed">The bus line %s no longer passes at this bus stop!</string>
	<string name="bus_stop_no_info_and_source">No information on %2$s about the line %1$s at this bus stop.</string>
	<string name="bus_stop_no_results_date">No service today for the line %1$s at this bus stop.</string>
	<string name="waiting_for_location_fix">Waiting for location&#8230;</string>
	<string name="no_location_provider_available">No location provider available.\nYou need to enable location by wireless network or GPS satellites in your phone settings.</string>
	<string name="subway_status">Service status</string>
	<string name="subway_status_hour">Service status (%s)</string>
	<string name="subway_status_message">The STM post métro service disruptions lasting 20 minutes and more.\n\nhttp://twitter.com/stminfo</string>
	<string name="reload_subway_status">Service status</string>
	<string name="subway_status_updating">Updating service status&#8230;</string>
	<string name="subway_status_done">Service status updated.</string>
	<string name="subway_status_loading_cancelled">Update of the service status cancelled.</string>
	<string name="shake_closest_stop_selected">Closest stop selected</string>
	<string name="shake_closest_bus_line_stop_selected">Closest bus line stop selected</string>
	<string name="shake_closest_subway_line_station_selected">Closest subway line station selected</string>
	<string name="shake_closest_subway_station_selected">Closest subway station selected</string>
	<string name="shake_closest_bike_station_selected">Closest bike station selected</string>
	<string name="bike">Bike</string>
	<string name="bikes">Bikes</string>
	<plurals name="bikes_nb">
	    
        <item quantity="one">%d bike</item>
        <item quantity="other">%d bikes</item>
    </plurals>
	<string name="dock">Dock</string>
	<string name="docks">Docks</string>
	<plurals name="docks_nb">
	    
        <item quantity="one">%d dock</item>
        <item quantity="other">%d docks</item>
    </plurals>
	<string name="bike_station">Bike station</string>
	<string name="bike_stations">Bike stations</string>
	<string name="closest_bike_stations">Closest stations</string>
	<string name="closest_bike_stations_hour">Closest stations (%s)</string>
	<string name="closest_bike_stations_error">Error while searching for closest stations.</string>
	<string name="closest_bike_stations_cancelled">Search for closest stations cancelled.</string>
	<string name="bike_station_status">Availability</string>
	<string name="bike_station_status_hour">Availability (%s)</string>
	<string name="bike_station_not_installed">Not installed!</string>
	<string name="bike_station_locked">Locked!</string>
	<string name="nearby">Nearby</string>
	<string name="beta_pref_cat_title">BETA</string>
	<string name="bus_stop_loc_pref_title">Bus Stops Location</string>
	<string name="bus_stop_loc_pref_summary">Try to show bus stop location (BETA).</string>
	<string name="display_pref_cat_title">Display preferences</string>
	<string name="data_pref_cat_title">Data source</string>
	<string name="advanced_pref_cat_title">Advanced settings</string>
	<string name="credits_pref_cat_title">Credits</string>
	<string name="prefetching_pref_cat_title">Prefetching</string>
	<string name="nfc">NFC</string>
	<string name="group_by_pref_title">Bus Lines Display</string>
	<string name="group_by_pref_summary">How the bus lines are displayed in the bus line list.</string>
	<string name="group_by_pref_dialog_title">Group bus lines</string>
	<string name="group_by_pref_no_group">Don\'t group</string>
	<string name="group_by_pref_type">Group by Type</string>
	<string name="group_by_pref_day_night">Group by Day/Night</string>
	<string name="group_by_pref_number">Group by Number</string>
	<string name="prefetching_pref_title">Prefetching</string>
	<string name="prefetching_pref_summary">Download data in advance.</string>
	<string name="prefetching_wifi_only_pref_title">Over WiFi only</string>
	<string name="prefetching_wifi_only_pref_summary">Prefetch data over WiFi only.</string>
	<string name="ads_pref_title">Show Ads</string>
	<string name="ads_pref_summary">Help support the development of MonTransit.</string>
	<string name="donate_pref_title">Donate</string>
	<string name="donate_pref_summary">Support MonTransit development.</string>
	<string name="about_pref_title">About</string>
	<string name="about_pref_summary">More information about MonTransit.</string>
	<string name="version_pref_title">Version</string>
	<string name="version_pref_summary">%1$s (r%2$s)</string>
	<string name="select_group_by">Display</string>
	<string name="group_by_bus_line_no_group">Don\'t group</string>
	<string name="group_by_bus_line_type">Group by Type</string>
	<string name="group_by_bus_line_day_night">Group by Day/Night</string>
	<string name="group_by_bus_line_number">Group by Number</string>
	<string name="bus_line_string">Lines</string>
	<string name="to">to</string>
	<string name="see_in_stm_mobile_web_site">m.stm.info</string>
	<string name="show_map_from_stm_website">Map (stm.info)</string>
	<string name="refresh_next_bus_stop">Next passing</string>
	<string name="stop_refresh_next_bus_stop">Stop</string>
	<string name="next_bus_stop_load_cancelled">Loading aborted</string>
	<string name="show_in_map_exp">Maps(BETA)</string>
	<string name="use_radar">Radar</string>
	<string name="unknow_line_name">Unknown line</string>
	<string name="unknow_stop_place">Unknown bus stop</string>
	<string name="unknow_direction">Unknown direction</string>
    <string name="cancel">Cancel</string>
    <string name="select_next_stop_data_source">Source</string>
    <string name="search_pref_title">Search</string>
    <string name="search_pref_summary">Simple(fast) or complete(slow) search.</string>
    <string name="search_pref_dialog_title">Search type</string>
    <string name="distance_unit_pref_title">Distance unit</string>
    <string name="distance_unit_pref_summary">Metric(km/m) or Imperial(mi/ft) system.</string>
    <string name="distance_unit_pref_dialog_title">Distance unit</string>
    <string name="distance_pref_title">Distance display</string>
    <string name="distance_pref_summary">Simple or detailed distance display.</string>
    <string name="distance_pref_dialog_title">Distance display</string>
    <string name="clear_cache_pref_title">Clear cache.</string>
    <string name="clear_cache_pref_summary">Clear application cache.</string>
    <string name="menu_search">Search</string>
    <string name="menu_preferences">Settings</string>
    <string name="donate_thanks">Thanks for supporting the development of MonTransit.</string>
    <string name="donate_method">Payment method: </string>
    <string name="donate_select_method">Select the payment method</string>
    <string name="next">Next</string>
</resources>