<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- DISPLAY -->
	<PreferenceCategory android:title="@string/display_pref_cat_title" />
	<ListPreference android:key="pDistanceUnit"
		android:title="@string/distance_unit_pref_title" android:summary="@string/distance_unit_pref_summary"
		android:entries="@array/distance_unit_pref_entries" android:entryValues="@array/distance_unit_pref_values"
		android:dialogTitle="@string/distance_unit_pref_dialog_title"
		android:defaultValue="meter" />
	<!-- DATA -->
	<PreferenceCategory android:title="@string/data_pref_cat_title" />
	<ListPreference android:key="pNextStopProvider2"
		android:title="@string/next_stop_pref_title" android:summary="@string/next_stop_pref_summary"
		android:entries="@array/next_stop_pref_entries" android:entryValues="@array/next_stop_pref_values"
		android:dialogTitle="@string/next_stop_pref_dialog_title"
		android:defaultValue="auto" />
	<!-- ADVANCED -->
	<PreferenceCategory android:title="@string/advanced_pref_cat_title" />
	<ListPreference android:key="pSearch"
		android:title="@string/search_pref_title" android:summary="@string/search_pref_summary"
		android:entries="@array/search_pref_entries" android:entryValues="@array/search_pref_values"
		android:dialogTitle="@string/search_pref_dialog_title"
		android:defaultValue="simple" />
	<ListPreference android:key="pDistanceDisplay"
		android:title="@string/distance_pref_title" android:summary="@string/distance_pref_summary"
		android:entries="@array/distance_pref_entries" android:entryValues="@array/distance_pref_values"
		android:dialogTitle="@string/distance_pref_dialog_title"
		android:defaultValue="simple" />
	<PreferenceScreen android:key="pClearCache"
		android:title="@string/clear_cache_pref_title" android:summary="@string/clear_cache_pref_summary" />
	<!-- CREDITs -->
	<PreferenceCategory android:title="@string/credits_pref_cat_title" />
	<CheckBoxPreference android:key="pAds"
		android:title="@string/ads_pref_title" android:summary="@string/ads_pref_summary"
		android:defaultValue="true" />
	<PreferenceScreen android:key="pDonate"
		android:title="@string/donate_pref_title" android:summary="@string/donate_pref_summary" />
	<PreferenceScreen android:key="pAbout"
		android:title="@string/about_pref_title" android:summary="@string/about_pref_summary" />
	<PreferenceScreen android:key="pVersion"
		android:title="@string/version_pref_title" />
</PreferenceScreen>