<?xml version="1.0" encoding="ISO-8859-1"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<!-- SUBWAY STATION INFORMATIONS -->
	<RelativeLayout android:id="@+id/banner"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:background="@android:drawable/title_bar_tall"
		android:paddingRight="5dip" android:paddingLeft="5dip"
		android:gravity="fill_horizontal">

		<!-- SUBWAY IMG -->
		<ImageView android:id="@+id/img"
			android:layout_alignParentLeft="true" android:layout_width="45dip"
			android:layout_height="45dip" android:layout_marginRight="7dip"
			android:layout_marginTop="7dip" android:gravity="center"
			android:scaleType="centerInside" android:background="@drawable/subway_blue_big"
			android:layout_alignParentTop="true" />

		<!-- STATION NAME -->
		<TextView android:id="@+id/station_name"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_toRightOf="@id/img" android:textAppearance="?android:attr/textAppearanceLarge"
			android:textStyle="bold" android:singleLine="true" android:ellipsize="marquee"
			android:focusable="true" android:gravity="center_vertical|left"
			android:text="@string/unknow_stop_place" />

		<!-- SUBWAY LINES -->
		<TextView android:id="@+id/subway_line_string"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_toRightOf="@id/img" android:layout_below="@id/station_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/subway_line" android:layout_marginRight="5dip" />
		<ImageView android:id="@+id/subway_line_1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_toRightOf="@id/subway_line_string" android:gravity="bottom"
			android:layout_alignWithParentIfMissing="true" android:visibility="gone"
			android:layout_below="@id/station_name" />
		<ImageView android:id="@+id/subway_line_2"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_toRightOf="@id/subway_line_1" android:gravity="bottom"
			android:layout_alignWithParentIfMissing="true" android:visibility="gone"
			android:layout_below="@id/station_name" />
		<ImageView android:id="@+id/subway_line_3"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_toRightOf="@id/subway_line_2" android:gravity="bottom"
			android:layout_alignWithParentIfMissing="true" android:visibility="gone"
			android:layout_below="@id/station_name" />
		<!--
			android:gravity="bottom" android:layout_below="@id/station_name"
			android:layout_alignBaseline="@id/subway_line_string"
		-->
	</RelativeLayout>

	<!-- DIRECTIONs -->
	<!--
		TextView android:id="@+id/next_stops_string"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/next_bus_stops" android:background="#666"
		android:textColor="#fff" android:paddingLeft="5dp" /> <RelativeLayout
		android:id="@+id/next_stops_group" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:paddingRight="5dip" android:paddingLeft="5dip"
		android:gravity="center_vertical"> <TextView
		android:id="@+id/the_next_stop" android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true" android:singleLine="true"
		android:ellipsize="end"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textStyle="bold" android:text="@string/ellipsis" /> <TextView
		android:id="@+id/the_second_next_stop"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/the_next_stop"
		android:layout_alignBottom="@id/the_next_stop"
		android:layout_marginLeft="5dip" android:singleLine="true"
		android:ellipsize="end"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold" android:text="@string/ellipsis" /> <TextView
		android:id="@+id/other_stops" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/the_second_next_stop"
		android:layout_alignBottom="@id/the_second_next_stop"
		android:layout_marginLeft="5dip"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textStyle="bold" android:singleLine="true"
		android:focusable="true" android:ellipsize="marquee"
		android:gravity="center_vertical|left" android:text="@string/ellipsis"
		/> </RelativeLayout
	-->

	<!-- BUS LINES -->
	<TextView android:id="@+id/bus_line" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/bus_lines_connecting"
		android:background="#666" android:textColor="#fff"
		android:paddingLeft="5dp" />
	<!-- android:visibility="gone" -->
	<ExpandableListView android:id="@+id/bus_line_list"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<TextView android:id="@+id/empty_bus_line_list"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/no_bus_line" />
</LinearLayout>